<resources>
    <string name="app_name">Scouting 2015</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="autonomous_label">Autonomous</string>
    <string name="autonomous_position_label">Position</string>

    <string name="autonomous_floor_zone_text">Floor Zone</string>
    <string name="autonomous_partial_low_zone_text">Partial Low Zone</string>
    <string name="autonomous_low_zone_text">Low Zone</string>
    <string name="autonomous_mid_zone_text">Mid Zone</string>
    <string name="autonomous_high_zone_text">High Zone</string>
    <string name="autonomous_climbers">Climbers</string>
    <string name="zero_climbers_text">0</string>
    <string name="one_climbers_text">1</string>
    <string name="two_climbers_text">2</string>
    <string name="three_climbers_text">3</string>
    <string name="autonomous_beacon">Rescue Beacon</string>
    <string name="autonomous_repair_text">Repair Button</string>
    <string name="autonomous_beacon_press">Which Press</string>
    <string name="autonomous_beacon_first_press_text">First Press</string>
    <string name="autonomous_beacon_second_press_text">Second Press</string>
    <string name="autonomous_color_text">Correct Color</string>
</resources>
